# python-tickets

./: Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  start.sh  supervisord.conf
.docker/: staging.yml
.docker/app/: BaseDockerfile  Dockerfile
.docker/environments/: local.env  staging.env
.docker/nginx/pro/: Dockerfile
.docker/scripts/: create_db_container.sh  local.sh  staging.sh
.github/workflows/: deploy.yml
_docker/: Dockerfile  docker-compose.yml  entrypoint.sh
_tests_message/: test_send_mail.py
application/di/authentication/: injector.py
application/di/tickets/: injector.py
application/ports/driven/: mail_repository_port.py  ticket_repository_port.py
application/ports/driving/: authentication_service_port.py  mail_service_port.py  tickets_service_port.py
application/services/: authentication_services.py  mail_processor_services.py  mail_services.py  ticket_processor_services.py  ticket_services.py
boot/: asgi.py  settings.py  wsgi.py
domain/: mail.py  product.py  ticket.py  tokens.py  user.py
domain/ports/: mailserver_port.py
driven/db/authentication/: adapter.py
driven/db/mail/: adapter.py  apps.py  models.py
driven/db/product/: admin.py  apps.py  models.py
driven/db/store/: admin.py  apps.py  models.py
driven/db/ticket/: adapter.py  admin.py  apps.py  mapper.py  (+1 more)
driven/mail/: mail_repository_adapter.py
driving/api_rest/: router.py  security.py
driving/mails/: adapter.py
driving/tickets/: tickets_adapter.py
infrastructure/django/: asgi.py  celery.py  settings.py  wsgi.py
(+45 files in other folders)
