[tool.poetry]
name = "serverticket"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
sqlalchemy = "2.0.27"
psycopg2-binary = "2.9.9"
uvicorn = "0.31.0"
aiosmtpd = "1.4.6"
pyasyncore = "1.0.4"
django = "5.1.1"
djangorestframework = "^3.15.2"
django-oauth-toolkit = "^2.4.0"
psycopg2 = "^2.9.9"
pdfplumber = "0.11.3"
pillow = "10.4.0"
gunicorn = "23.0.0"
APScheduler = "3.10.4"
dependency-injector = "4.42.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-asyncio = "0.23.7"
pytest-xdist = "3.6.1"
pytest-faker = "2.0.0"
pytest-freezer = "0.4.8"
pyfakefs = "5.5.0"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
